--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,16 +24,22 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Github Container Registry
+      - name: Login to Docker Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+        # uses: docker/login-action@v2
+        # with:
+        #   registry: ghcr.io
+        #   username: ${{ github.repository_owner }}
+        #   password: ${{ secrets.CR_PAT }}
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}, ghcr.io/${{ github.repository }}:latest
+          # tags: ghcr.io/${{ github.repository }}:${{ github.sha }}, ghcr.io/${{ github.repository }}:latest
+          tags: docker.io/livehouseautomation/chatpad:${{ github.sha }}, docker.io/livehouseautomation/chatpad:latest
