--- a/src/static/config.json
+++ b/src/static/config.json
@@ -45,7 +45,15 @@
       {
         "value": "gpt-4-1106-preview",
         "label": "GPT-4-1106 (Preview)"
-      }      
+      },
+      {
+        "value": "gpt-4-turbo-2024-04-09",
+        "label": "GPT-4 Turbo with Vision"
+      },
+      {
+        "value": "gpt-4-turbo",
+        "label": "Latest GPT-4 Turbo with Vision (Pointer)"
+      }  
     ],
     "writingCharacters": [
       {
